# StateViewJuceDemo

./: .gitignore  README.MD  _clang-format
JuceChangeBroadcasterProcessor/: CMakeLists.txt
JuceChangeBroadcasterProcessor/Source/: AudioPlayer.h  AudioPlayerProcessor.cpp  AudioPlayerProcessor.h  AudioPlayerState.h  AudioPlayerView.cpp  AudioPlayerView.h  Main.cpp
JuceChangeBroadcasterState/: CMakeLists.txt
JuceChangeBroadcasterState/Source/: AudioPlayer.h  AudioPlayerProcessor.cpp  AudioPlayerProcessor.h  AudioPlayerState.h  AudioPlayerView.cpp  AudioPlayerView.h  MainComponent.cpp  MainComponent.h
JuceListenerList/: CMakeLists.txt
JuceStartingPoint/: CMakeLists.txt
JuceStartingPoint/Source/: AudioPlayerProcessor.cpp  AudioPlayerProcessor.h  AudioPlayerView.cpp  AudioPlayerView.h  Main.cpp  MainComponent.cpp  MainComponent.h
ObserverStyle/: CMakeLists.txt
ObserverStyle/Source/: AudioPlayer.h  AudioPlayerProcessor.cpp  AudioPlayerProcessor.h  AudioPlayerState.h  AudioPlayerView.cpp  AudioPlayerView.h  MainComponent.cpp  MainComponent.h
RocketLibrary/: CMakeLists.txt
RocketLibrary/Source/: AudioPlayer.h  AudioPlayerProcessor.cpp  AudioPlayerProcessor.h  MainComponent.cpp
RxCppLibrary/: CMakeLists.txt
RxCppLibrary/Source/: AudioPlayer.h  AudioPlayerProcessor.cpp  AudioPlayerProcessor.h  AudioPlayerView.cpp
TypePipeLibrary/: CMakeLists.txt
TypePipeLibrary/Source/: AudioPlayer.h  AudioPlayerProcessor.cpp  AudioPlayerProcessor.h  AudioPlayerState.h  AudioPlayerView.h  MainComponent.h
